--- a/ProductReviewAungAndBryant/Client/Pages/Category/Category.razor
+++ b/ProductReviewAungAndBryant/Client/Pages/Category/Category.razor
@@ -106,9 +106,9 @@ else
     }   
 
     public void Dispose()
-    {   
+    {
         _interceptor.DisposeEvent();
-        js.InvokeVoidAsync("DataTablesDispose", "#categorieTable");
+        js.InvokeVoidAsync("DataTablesDispose", "#categoriesTable");
     }
 }
 
